# AD688-Sp26-O2-Group1-Job-Market-Analysis-2024

./: .gitignore  .nojekyll  Primo_BibTeX_Export.bib  README.md  _quarto.yml  ai_transparency.html  ai_transparency.qmd  career_plan.html  career_plan.qmd  contributions.html  contributions.qmd  custom.css  data_cleaning.html  data_cleaning.qmd  eda.html  eda.qmd  final_report.docx  final_report.html  final_report.qmd  index.html  index.qmd  introduction.docx  introduction.html  introduction.qmd  ml_methods.html  ml_methods.qmd  pyproject.toml  references.bib  requirements.txt  robots.txt  sage_srda10.bib  search.json  sitemap.xml  skill_gap_analysis.html  skill_gap_analysis.qmd
.github/workflows/: publish.yml
_site/: career_plan.html  data_cleaning.html  eda.html  final_report.docx  index.html  introduction.html  ml_methods.html  search.json  skill_gap_analysis.html
docs/: career_plan.html  data_cleaning.html  eda.html  final_report.docx  index.html  introduction.html  ml_methods.html  search.json
docs/site_libs/bootstrap/: bootstrap.min.css
outputs/: interactive_charts.py  plotly_charts.py  salary_by_industry.html  salary_distribution.html  top_industries.html
