[project]
name = "ubuntu"
version = "0.1.0"
description = ""
authors = [
    {name = "Caelusbellum",email = "230491511+Caelusbellum@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
